Fix sidemenu z-index

--- a/src/containers/LivingWhitepaper/components/DeveloperPortalLayout/DeveloperPortalLayout.scss
+++ b/src/containers/LivingWhitepaper/components/DeveloperPortalLayout/DeveloperPortalLayout.scss
@@ -1,4 +1,5 @@
 @import '../../shared';
+@import 'styles/z-index';
 
 .DeveloperPortalLayout {
   &__main-content {
@@ -18,5 +19,6 @@
   &__breadcrumb {
     position: sticky;
     top: $top-nav-height + $top-links-height;
+    z-index: $z-index-whitepaper-breadcrumb;
   }
 }
