--- a/src/styles/_z-index.scss
+++ b/src/styles/_z-index.scss
@@ -18,3 +18,7 @@ $z-index-top-nav-mobile-button: 4;
 $z-index-slideup-root: 150;
 
 $z-index-popover-root: 200;
+
+$z-index-whitepaper-top-links: 4;
+$z-index-whitepaper-breadcrumb: 4;
+$z-index-whitepaper-sidemenu: 1;
